--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">EasyBridal</string>
-    <string name="title_activity_homemenu">homemenu</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Home Menu</string>
+    <string name="n1">JavaBride</string>
+    <string name="n2">JavaBride1</string>
+    <string name="n3">JavaBride2</string>
+    <string-array name="namaakunuser">
+        <item>JavaBride</item>
+        <item>JavaBride1</item>
+        <item>JavaBride2</item>
+    </string-array>
+    
 </resources>
