--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="n1">JavaBride</string>
     <string name="n2">JavaBride1</string>
     <string name="n3">JavaBride2</string>
+    <string name="deskripsiasal">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.</string>
     <string-array name="namaakunuser">
         <item>JavaBride</item>
         <item>JavaBride1</item>
         <item>JavaBride2</item>
     </string-array>
-    
+
 </resources>
