--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="n2">JavaBride1</string>
     <string name="n3">JavaBride2</string>
     <string name="deskripsiasal">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.</string>
+    <string name="loremipsumdolor">Lorem ipsum dolor sit amet consectetur. Vestibulum posuere amet accumsan eu tempor nisl ut morbi. Nulla commodo molestie bibendum consequat.</string>
     <string-array name="namaakunuser">
         <item>JavaBride</item>
         <item>JavaBride1</item>
